deployment.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: learn2relax-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit
        # Replace $GCLOUD_PROJECT with your project ID
        image: gcr.io/learn2relax/myimage
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 8080
