service.yaml
# The hello service provides a load-balancing proxy over the hello-app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
apiVersion: v1
kind: Service
metadata:
  name: streamlit
spec:
  type: LoadBalancer
  selector:
    app: streamlit
  ports:
  - port: 80
    targetPort: 8080
